Integrated resturant backend API and fixed alignment issues.

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,5 +1,5 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  margin: 10px 5px;
+  justify-content: space-evenly;
 }
